fixed security issue with how images were served

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1197,7 +1197,7 @@
                                 style="background-color: var(--bg-primary); min-height: 0;"
                             >
                                 <img 
-                                    :src="`/data/${currentImage}`" 
+                                    :src="`/api/images/${currentImage}`" 
                                     :alt="currentImage.split('/').pop()"
                                     style="max-width: 100%; max-height: 100%; object-fit: contain; padding: 2rem;"
                                 />
